# news-summarizer

./: .gitignore  Untitled.ipynb  analyze_text_length.py  main.py  pyproject.toml
dags/: news_search_dag.py
data/processed/: keyword_summaries_20250628.json  keyword_summaries_20250628.md  summarized_news_20250628.json
data/raw/: .naver_news_20250628.json.swp  naver_20250701.txt  naver_news_20250628.json
notebooks/: 00_analyze_text_length.py  01_news_crawl_and_sample.ipynb  02_kobart_summarize.ipynb.ipynb
serving/: service.py
src/: 01_news_crawl.py  02_kobart_summarize.py  03_keyword_summarize.py
