[project]
name = "project-m-2507"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "transformers",
    "datasets",
    "evaluate",
    "bentoml",
    "jupyterlab",
    "streamlit",
    "ipywidgets>=8.1.7",
    "requests>=2.32.4",
    "beautifulsoup4>=4.13.4",
    "pandas>=2.3.0",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.3",
]
